# data-systems-playground

./: LICENSE  README.md
duckdb-nodejs/: README.md  index.js  package.json
mdd-on-mac/: github_pipeline.py  pyproject.toml
mdd-on-mac/.dlt/: .sources
vulcan-sql/: README.md
vulcansql/: README.md
vulcansql/my-first-vulcan-project/: package-lock.json  package.json  result.json  vulcan.yaml
vulcansql/my-first-vulcan-project/sqls/: flight.sql  flight.yaml
